--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,14 +9,14 @@
         <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
-        <h1>This is a heading 1</h1>
+        <h1>libSassMeister</h1>
         <form action="/compile" method="post" accept-charset="utf-8">
           <label for="input">Sass</label>
           <textarea name="input">$box-color: red;
 
 .box { 
   color: $box-color;
-  }</textarea>
+}</textarea>
           <label for="output_style">Output Style</label>
           <select name="output_style">
             <option value="compressed">Compressed
