--- a/sass_modules/bourbon/addons/_prefixer.scss
+++ b/sass_modules/bourbon/addons/_prefixer.scss
@@ -1,7 +1,11 @@
 //************************************************************************//
 // Example: @include prefixer(border-radius, $radii, webkit ms spec);
 //************************************************************************//
-// Variables located in /settings/_prefixer.scss
+$prefix-for-webkit:    true !default;
+$prefix-for-mozilla:   true !default;
+$prefix-for-microsoft: true !default;
+$prefix-for-opera:     true !default;
+$prefix-for-spec:      true !default; // required for keyframe mixin
 
 @mixin prefixer ($property, $value, $prefixes) {
   @each $prefix in $prefixes {
