--- a/sass_modules/bourbon/css3/_keyframes.scss
+++ b/sass_modules/bourbon/css3/_keyframes.scss
@@ -20,6 +20,13 @@
       @content;
     }
   }
+  @if $original-prefix-for-opera {
+    @include disable-prefix-for-all();
+    $prefix-for-opera: true;
+    @-o-keyframes #{$name} {
+      @content;
+    }
+  }
   @if $original-prefix-for-spec {
     @include disable-prefix-for-all();
     $prefix-for-spec: true;
