Fix test content

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
           <label for="input">Sass</label>
           <textarea name="input">$box-color: red;
 
+@import 'bourbon/bourbon';
 @import 'bitters/bitters';
 
 .box { 
