--- a/sass_modules/garnish/src/garnish.scss
+++ b/sass_modules/garnish/src/garnish.scss
@@ -6,6 +6,7 @@
 // layout
 @import "layout/margin";
 @import "layout/padding";
+@import "layout/simple-grid";
 
 // typography
 @import "typography/hyphenated";
