Add sass2scss to support Sass syntax

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,11 @@
             <option value="nested">Nested
             <option value="expanded" selected>Expanded
           </select>
+          <label for="syntax">Syntax</label>
+          <select name="syntax">
+            <option value="sass">Sass
+            <option value="scss" selected>SCSS
+          </select>
           <button type="submit">Go</button>
         </form>
     </body>
